2004-02-17  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimpeditor.c (gimp_editor_add_stock_box): cannot
	gtk_widget_destroy() a floating widget, sink it instead.

	* libgimpwidgets/gimppatheditor.c (gimp_path_editor_set_path):
	plugged a small memleak.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12386 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-02-17  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpeditor.c (gimp_editor_add_stock_box): cannot
+	gtk_widget_destroy() a floating widget, sink it instead.
+
+	* libgimpwidgets/gimppatheditor.c (gimp_path_editor_set_path):
+	plugged a small memleak.
+
 2004-02-17  Pedro Gimeno  <pggimeno@wanadoo.es>
 
 	* plug-ins/pagecurl/pagecurl.c: Corrected the pairing of
