--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-18  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell-handlers.c
+	(gimp_display_shell_disconnect): disconnect from the correct
+	config objects. Fixes bug #134694.
+
 2004-02-17  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimpeditor.c (gimp_editor_add_stock_box): cannot
