--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-02-18  Sven Neumann  <sven@gimp.org>
+
+	* app/base/tile.h: exchanged TILEROWHINT_UNKNOWN and
+	TILEROWHINT_BROKEN so that TILEROWHINT_UNKNOWN becomes 0. This
+	allows to use calloc() to allocate and initialize the rowhint
+	array.
+
+	* app/base/tile.c (tile_sanitize_rowhints): reimplemented with by
+	a call to g_new0().
+
+	* app/base/tile-manager.c (tile_manager_get): use g_memdup() to
+	duplicate the rowhints when creating a tile copy.
+
 2004-02-18  Michael Natterer  <mitch@gimp.org>
 
 	Some code review:
