2004-02-18  Simon Budig  <simon@gimp.org>
	* app/display/gimpdisplayshell.c
	* app/tools/gimpmovetool.c: Adjusted snapping distance
	to 8 pixels, probably should be a preferences option.

	* app/tools/gimppainttool.c: Do not center the start and end
	of a straight line to the center of an image-pixel unless
	the brush mode is GIMP_BRUSH_HARD. Fixes bug #134410.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12391 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-02-18  Simon Budig  <simon@gimp.org>
+
+	* app/display/gimpdisplayshell.c
+	* app/tools/gimpmovetool.c: Adjusted snapping distance
+	to 8 pixels, probably should be a preferences option.
+
+	* app/tools/gimppainttool.c: Do not center the start and end
+	of a straight line to the center of an image-pixel unless
+	the brush mode is GIMP_BRUSH_HARD. Fixes bug #134410.
+
 2004-02-18  Sven Neumann  <sven@gimp.org>
 
 	* app/base/tile.h: exchanged TILEROWHINT_UNKNOWN and
