2004-02-18  Simon Budig  <simon@gimp.org>
	* app/config/gimpguiconfig.[ch]
	* app/config/gimprc-blurbs.h: Added new GUI option: snapping distance

	* app/gui/preferences-dialog.c: add a preferences widget

	* app/tools/gimpmovetool.c
	* app/display/gimpdisplayshell.c: use it for snapping.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12394 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-02-18  Simon Budig  <simon@gimp.org>
 
+	* app/config/gimpguiconfig.[ch]
+	* app/config/gimprc-blurbs.h: Added new GUI option: snapping distance
+
+	* app/gui/preferences-dialog.c: add a preferences widget
+
+	* app/tools/gimpmovetool.c
+	* app/display/gimpdisplayshell.c: use it for snapping.
+
+2004-02-18  Simon Budig  <simon@gimp.org>
+
 	* app/display/gimpdisplayshell.c
 	* app/tools/gimpmovetool.c: Adjusted snapping distance
 	to 8 pixels, probably should be a preferences option.
