--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-19  Sven Neumann  <sven@gimp.org>
 
+	* app/tools/gimplevelstool.c: more dialog tweaking, fixed
+	positioning of slider triangles.
+
+2004-02-19  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimplevelstool.c (gimp_levels_tool_dialog): applied
 	patch from Dave Neary that removes gray point pickers for
 	individual channels (bug #125303). Let the levels widgets expand
