--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-02-19  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/common/lic.c: fixed gimp_dialog_new invocation.
+	Also fixed a blatant error in the algorithm (GimpRGB has a 
+	range from 0..1 for each component...) and now the plugin
+	actually does something useful.
+
 2004-02-19  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimpcurvestool.c (gimp_curves_tool_dialog): follow
