2004-02-19  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpdasheditor.[ch]: removed static variables, don't
	use GIMP_CONFIG_INSTALL_PROP_FOO() for non-config classes,
	trailing whitespace, cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12404 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-19  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpdasheditor.[ch]: removed static variables, don't
+	use GIMP_CONFIG_INSTALL_PROP_FOO() for non-config classes,
+	trailing whitespace, cleanup.
+
 2004-02-19  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/common/lic.c: fixed gimp_dialog_new invocation.
