--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-19  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpstock.sgml
+	* libgimpwidgets/tmpl/gimpwidgets.sgml: updated.
+
 2004-02-17  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/libgimp-sections.txt
