--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-19  Sven Neumann  <sven@gimp.org>
+
+	* app/app-sections.txt
+	* app/app.types: updated.
+
 2004-02-19  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/libgimpwidgets-sections.txt
