2004-02-19  Ole Laursen  <olau@hardworking.dk>
	* da.po: Updated Danish translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12409 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
+2004-02-19  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-02-19  Marco Ciampa  <ciampix@libero.it>
 
-	* it.po: Updated italian translation.
+	* it.po: Updated Italian translation.
 
 2004-02-16  Artur Flinta  <aflinta@cvs.gnome.org>
 
