2004-02-20  Simon Budig  <simon@gimp.org>
	* plug-ins/common/lic.c: fixed crash when the effect image
	is smaller than the target drawable. Major code overhaul (not
	yet fully completed), removed global variables, removed
	micro-functions that itself just invoke micro-functions, use
	more libgimpcolor functions.

	Slightly improved the algorithm by adding small random
	distorsions to the effect image. This avoids artefacts in plain
	areas.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12410 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-02-20  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/common/lic.c: fixed crash when the effect image
+	is smaller than the target drawable. Major code overhaul (not
+	yet fully completed), removed global variables, removed
+	micro-functions that itself just invoke micro-functions, use
+	more libgimpcolor functions.
+
+	Slightly improved the algorithm by adding small random
+	distorsions to the effect image. This avoids artefacts in plain
+	areas.
+
 2004-02-19  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/Makefile.am
