--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-20  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2004-02-19  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
