--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-20  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2004-02-16  Sven Neumann  <sven@gimp.org>
 
 	* Makefile.am (tips_POFILES): added ms.po (Malay).
