2004-02-20  Manish Singh  <yosh@gimp.org>
        * plug-ins/common/pygimp/plug-ins/sphere.py: Moved to the Test menu,
        to clarify its station in life.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12416 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-02-20  Manish Singh  <yosh@gimp.org>
 
+	* plug-ins/common/pygimp/plug-ins/sphere.py: Moved to the Test menu,
+	to clarify its station in life.
+
+2004-02-20  Manish Singh  <yosh@gimp.org>
+
 	* plug-ins/common/pygimp/gimpfu.py: Do some simple validation on the
 	GUI input. Arrays are still kinda hokey though. Based on Dave Neary's
 	patch, addresses bug #122049.
