2004-02-21  Simon Budig  <simon@gimp.org>
	* app/tools/gimpdrawtool.[ch]: added "use_offsets" parameter
	to gimp_draw_tool_draw_boundary() for consistency.

	* app/tools/gimpeditselectiontool.c: Changed accordingly.

	* app/tools/gimppainttool.c: when drawing straight lines draw
	the brush preview at the end of the line.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12421 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-02-21  Simon Budig  <simon@gimp.org>
+
+	* app/tools/gimpdrawtool.[ch]: added "use_offsets" parameter
+	to gimp_draw_tool_draw_boundary() for consistency.
+
+	* app/tools/gimpeditselectiontool.c: Changed accordingly.
+
+	* app/tools/gimppainttool.c: when drawing straight lines draw
+	the brush preview at the end of the line.
+
 2004-02-20  Sven Neumann  <sven@gimp.org>
 
 	* app/tools/gimplevelstool.[ch]: put the color bars into an event
