--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-21  Manish Singh  <yosh@gimp.org>
+
+	* app/widgets/gimpenummenu.c (gimp_enum_stock_box_set_child_padding):
+	Add GTK_MISC cast for bin->child.
+
 2004-02-21  Simon Budig  <simon@gimp.org>
 
 	* app/tools/gimpdrawtool.[ch]: added "use_offsets" parameter
