2004-02-22 Updated ja.po by Ryoichi INAGAKI <inagaki@ryo1.net>. T.Aihana <aihana@gnome.gr.jp>
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12426 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-22  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation by
+		Ryoichi INAGAKI <inagaki@ryo1.net>
+
 2004-02-20  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
