2004-02-23  Simon Budig  <simon@gimp.org>
	* app/core/gimp.[ch]: removed unused member "standard_context"
	from the Gimp struct.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12427 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-23  Simon Budig  <simon@gimp.org>
+
+	* app/core/gimp.[ch]: removed unused member "standard_context"
+	from the Gimp struct.
+
 2004-02-22  Sven Neumann  <sven@gimp.org>
 
 	Let all GimpImageMap tools remember the state of the preview toggle
