--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-23  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+
 2004-02-20  Stanislav Brabec  <utx@penguin.cz>
 
 	* cs.po: Typo fix.
