--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-23  Marco Ciampa <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+
 2004-02-22  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation by
