2004-02-23  Simon Budig  <simon@gimp.org>
	* app/tools/gimpinktool-blob.c: don't access the array before
	checking if the index is within the valid bounds...


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@12430 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-23  Simon Budig  <simon@gimp.org>
+
+	* app/tools/gimpinktool-blob.c: don't access the array before
+	checking if the index is within the valid bounds...
+
 2004-02-23  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage-snap.[ch]: return the snapped coordinates as
